adding newest data to the scripts

--- a/2. Merging the quarterly data from COVER (rotavirus vaccination).Rmd
+++ b/2. Merging the quarterly data from COVER (rotavirus vaccination).Rmd
@@ -27,7 +27,7 @@ library(dplyr)
 
 ```{r Q1 2019/20 (Apr19-Jun19), echo=FALSE} 
 
-data <- read_ods("File path to >>> 1 coverGP Apr19Jun19.ods" , sheet = 2 , skip = 2)
+data <- read_ods("./COVER datasets April 2019 - March 2023/1 coverGP Apr19Jun19.ods" , sheet = 2 , skip = 2)
 rows_to_remove <- c(7012:7014)
 data <- data[-rows_to_remove, ]
 #Keep only rota column and GP codes (omit CCG info and other vaccs here)
@@ -73,7 +73,7 @@ data1_Apr19Jun19 <- as.data.table(data)
 
 
 ```{r Q2 2019/20 (Jul19-Sep19), echo=FALSE}
-data <- read_ods("File path to >>> 2 coverGP Jul19Sep19.ods" , sheet = 2 , skip = 2)
+data <- read_ods("./COVER datasets April 2019 - March 2023/2 coverGP Jul19Sep19.ods" , sheet = 2 , skip = 2)
 rows_to_remove <- c(6973:6976)
 data <- data[-rows_to_remove, ]
 #Keep only rota column and GP codes (omit CCG info and other vaccs here)
@@ -117,7 +117,7 @@ data2_Jul19Sep19 <- as.data.table(data)
 ```
 
 ```{r Q3 2019/20 (Oct19-Dec19), echo=FALSE}
-data <- read_ods("File path to >>> 3 coverGP Oct19Dec19.ods" , sheet = 2 , skip = 2)
+data <- read_ods("./COVER datasets April 2019 - March 2023/3 coverGP Oct19Dec19.ods" , sheet = 2 , skip = 2)
 rows_to_remove <- c(6915:6917)
 data <- data[-rows_to_remove, ]
 #Keep only rota column and GP codes (omit CCG info and other vaccs here)
@@ -161,7 +161,7 @@ data3_Oct19Dec19 <- as.data.table(data)
 ```
 
 ```{r Q4 2019/20 (Jan20-Mar20), echo=FALSE}
-data <- read_ods("File path to >>> 4 coverGP Jan20Mar20.ods" , sheet = 2 , skip = 2)
+data <- read_ods("./COVER datasets April 2019 - March 2023/4 coverGP Jan20Mar20.ods" , sheet = 2 , skip = 2)
 rows_to_remove <- c(6905:6907)
 data <- data[-rows_to_remove, ]
 #Keep only rota column and GP codes (omit CCG info and other vaccs here)
@@ -205,7 +205,7 @@ data4_Jan20Mar20 <- as.data.table(data)
 ```
 
 ```{r Q1 2020/21 (Apr20-Jun20), echo=FALSE}
-data <- read_ods("File path to >>> 5 coverGP Apr20Jun20.ods" , sheet = 2 , skip = 5)
+data <- read_ods("./COVER datasets April 2019 - March 2023/5 coverGP Apr20Jun20.ods" , sheet = 2 , skip = 6)
 rows_to_remove <- c(6768,6769)
 data <- data[-rows_to_remove, ]
 #Keep only rota column and GP codes (omit CCG info and other vaccs here)
@@ -252,7 +252,7 @@ data5_Apr20Jun20 <- as.data.table(data)
 ```
 
 ```{r Q2 2020/21 (Jul20-Sep20), echo=FALSE}
-data <- read_ods("File path to >>> 6 coverGP Jul20Sep20.ods" , sheet = 2 , skip = 5)
+data <- read_ods("./COVER datasets April 2019 - March 2023/6 coverGP Jul20Sep20.ods" , sheet = 2 , skip = 6)
 rows_to_remove <- c(6737)
 data <- data[-rows_to_remove, ]
 #Keep only rota column and GP codes (omit CCG info and other vaccs here)
@@ -299,7 +299,7 @@ data6_Jul20Sep20 <- as.data.table(data)
 ```
 
 ```{r Q3 2020/21 (Oct20-Dec20), echo=FALSE}
-data <- read_ods("File path to >>> 7 coverGP Oct20Dec20.ods" , sheet = 2 , skip = 3)
+data <- read_ods("./COVER datasets April 2019 - March 2023/7 coverGP Oct20Dec20.ods" , sheet = 2 , skip = 4)
 rows_to_remove <- c(6719, 6720)
 data <- data[-rows_to_remove, ]
 #Keep only rota column and GP codes (omit CCG info and other vaccs here)
@@ -347,7 +347,7 @@ data7_Oct20Dec20 <- as.data.table(data)
 
 ```{r Q4 2020/21 (Jan21-Mar21), echo=FALSE}
 
-data <- read_ods("File path to >>> 8 coverGP Jan21Mar21.ods" , sheet = 2 , skip = 3)
+data <- read_ods("./COVER datasets April 2019 - March 2023/8 coverGP Jan21Mar21.ods" , sheet = 2 , skip = 4)
 rows_to_remove <- c(6691, 6692)
 data <- data[-rows_to_remove, ]
 #Keep only rota column and GP codes (omit CCG info and other vaccs here)
@@ -395,7 +395,7 @@ data8_Jan21Mar21 <- as.data.table(data)
 
 ```{r Q1 2021/22 (Apr21-Jun21), echo=FALSE}
 
-data <- read_ods("File path to >>> 9 coverGP Apr21Jun21.ods" , sheet = 2 , skip = 3)
+data <- read_ods("./COVER datasets April 2019 - March 2023/9 coverGP Apr21Jun21.ods" , sheet = 2 , skip = 4)
 rows_to_remove <- c(6605, 6606)
 data <- data[-rows_to_remove, ]
 #Keep only rota column and GP codes (omit CCG info and other vaccs here)
@@ -444,7 +444,7 @@ data9_Apr21Jun21 <- as.data.table(data)
 Note denom with lower case d in this Q
 ```{r Q2 2021/22 (Jul21-Sep21), echo=FALSE}
 
-data <- read_ods("File path to >>> 10 coverGP Jul21Sep21.ods" , sheet = 2 , skip = 2)
+data <- read_ods("./COVER datasets April 2019 - March 2023/10 coverGP Jul21Sep21.ods" , sheet = 2 , skip = 2)
 rows_to_remove <- c(6509)
 data <- data[-rows_to_remove, ]
 #Keep only rota column and GP codes (omit CCG info and other vaccs here)
@@ -492,7 +492,7 @@ data10_Jul21Sep21 <- as.data.table(data)
 
 ```{r Q3 2021/22 (Oct21-Dec21), echo=FALSE}
 
-data <- read_ods("File path to >>> 11 coverGP Oct21Dec21.ods" , sheet = 2 , skip = 2)
+data <- read_ods("./COVER datasets April 2019 - March 2023/11 coverGP Oct21Dec21.ods" , sheet = 2 , skip = 2)
 rows_to_remove <- c(6513)
 data <- data[-rows_to_remove, ]
 #Keep only rota column and GP codes (omit CCG info and other vaccs here)
@@ -540,7 +540,7 @@ data11_Oct21Dec21 <- as.data.table(data)
 
 ```{r Q4 2021/22 (Jan22-Mar22), echo=FALSE}
 
-data <- read_ods("File path to >>> 12 coverGP Jan22Mar22.ods" , sheet = 2 , skip = 2)
+data <- read_ods("./COVER datasets April 2019 - March 2023/12 coverGP Jan22Mar22.ods" , sheet = 2 , skip = 2)
 rows_to_remove <- c(6482)
 data <- data[-rows_to_remove, ]
 #Keep only rota column and GP codes (omit CCG info and other vaccs here)
@@ -588,7 +588,7 @@ data12_Jan22Mar22 <- as.data.table(data)
 
 ```{r Q1 2022/23 (Apr22-Jun22), echo=FALSE}
 
-data <- read_ods("File path to >>> 13 coverGP Apr22Jun22.ods" , sheet = 2 , skip = 2)
+data <- read_ods("./COVER datasets April 2019 - March 2023/13 coverGP Apr22Jun22.ods" , sheet = 2 , skip = 2)
 rows_to_remove <- c(6477)
 data <- data[-rows_to_remove, ]
 #Keep only rota column and GP codes (omit CCG info and other vaccs here)
@@ -637,7 +637,7 @@ data13_Apr22Jun22 <- as.data.table(data)
 CCGs change to ICB here
 ```{r Q2 2022/23 (Jul22-Sep22), echo=FALSE}
 
-data <- read_ods("File path to >>> 14 coverGP Jul22Sep22.ods" , sheet = 2 , skip = 2)
+data <- read_ods("./COVER datasets April 2019 - March 2023/14 coverGP Jul22Sep22.ods" , sheet = 2 , skip = 2)
 rows_to_remove <- c(6448)
 data <- data[-rows_to_remove, ]
 #Keep only rota column and GP codes (omit CCG info and other vaccs here)
@@ -685,7 +685,7 @@ data14_Jul22Sep22 <- as.data.table(data)
 
 ```{r Q3 2022/23 (Oct22-Dec22), echo=FALSE}
 
-data <- read_ods("File path to >>> 15 coverGP Oct22Dec22.ods" , sheet = 2 , skip = 2)
+data <- read_ods("./COVER datasets April 2019 - March 2023/15 coverGP Oct22Dec22.ods" , sheet = 2 , skip = 2)
 rows_to_remove <- c(6429)
 data <- data[-rows_to_remove, ]
 #Keep only rota column and GP codes (omit CCG info and other vaccs here)
@@ -733,7 +733,7 @@ data15_Oct22Dec22 <- as.data.table(data)
 
 ```{r Q4 2022/23 (Jan23-Mar23), echo=FALSE}
 
-data <- read_ods("File path to >>> 16 coverGP Jan23Mar23.ods" , sheet = 2 , skip = 2)
+data <- read_ods("./COVER datasets April 2019 - March 2023/16 coverGP Jan23Mar23.ods" , sheet = 2 , skip = 2)
 rows_to_remove <- c(6398)
 data <- data[-rows_to_remove, ]
 #Keep only rota column and GP codes (omit CCG info and other vaccs here)
